# Reinforcement-Learning-Evaluation

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  debug_experiment.py  debug_finance.py  debug_legal.py  debug_medical.py  docker-compose.yml  main.py  pyproject.toml  test_gemma_setup.py  test_json_fix.py  test_new_prompt.py  test_reinforce_setup.py  test_simple_legal.py  test_word_count.py
.github/workflows/: cd.yml  ci.yml  release.yml
ace_task/: config.py  data.py  evaluate.py  grader.py  prompt.txt  prompting.py  train_reinforce.py
ace_task/algorithms/: __init__.py  base.py  best_of_n.py  reinforce.py  rewards.py
ace_task/scenarios/: __init__.py  base.py  business_long.py  economics.py  finance.py  legal.py  legal_long.py  medical.py  medical_long.py  report_long.py  report_top15.py  scientific.py  sports.py
experiments/: README.md  inspect_report_top15.py  run_best_of_n.py  train_reinforce.py  train_reinforce_gemma.py  visualize_results.py
results/best_of_n/: ablation_results_20251108_220310.json  ablation_results_20251108_223851.json  ablation_results_20251108_234041.json  ablation_results_20251108_234719.json  ablation_results_20251109_001205.json  ablation_results_20251109_003546.json  ablation_results_20251109_010644.json  ablation_results_20251109_021359.json  ablation_results_20251109_022600.json  ablation_results_20251109_233025.json  ablation_results_20251109_233537.json  ablation_results_20251109_234053.json  ablation_results_20251109_234612.json
results/best_of_n/plots/: summary_report.txt
tests/: __init__.py  test_algorithms.py  test_config.py  test_data.py  test_evaluate_module.py  test_grader.py  test_long_and_additional_scenarios.py  test_reinforce_trainer.py  test_rewards_dense.py  test_scenarios.py  test_scenarios_report_top15.py
